fix(a11y): Corrige contraste de cor nos links do rodapé

--- a/style.css
+++ b/style.css
@@ -218,7 +218,8 @@ footer p {
 }
 
 footer a {
-    color: var(--cor-secundaria-base);
+    color: white;
+    text-decoration: underline;
 }
 
 footer hr {
